integrated game board with sockets, took some shortcuts to keep the topic 'short'